--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-twitter-widgets": "^1.7.1",
     "react-youtube": "^7.6.0",
     "redux": "^4.0.0",
     "semantic-ui-css": "^2.3.2",
