youtube playlist embedded

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "1.1.4",
     "react-twitter-widgets": "^1.7.1",
     "react-youtube": "^7.6.0",
+    "react-youtube-playlist": "^2.2.7",
     "redux": "^4.0.0",
     "semantic-ui-css": "^2.3.2",
     "semantic-ui-react": "^0.81.1",
